SYKFPT-1061: 完成 Task 6.2 全链路 TCK 测试套件，验证项目交付质量